# receipt-reader

./: .gitignore  README.md  pyproject.toml  read_receipts.py
