[tool.poetry]
name = "receipt-reader"
version = "0.1.0"
description = ""
authors = ["Jarbton <j.barton.mail@googlemail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
